# corn-syrup

./: .env  .gitignore  AGENTS.md  ChangeLog.md  NOTE.md  README-tw.md  README.md  env.sample
src/backend/: .env  Cargo.toml  Makefile  backend.rs  config.rs  download_all_package-cron.sh  lib.rs  logging.rs  main.rs  server_core.rs  settings.rs  uptime.rs  util.rs  util_all-in-one-compile.sh  util_compile.sh  util_corn-syrup-loop-exec.sh  util_corn-syrup.sh  version_check.rs
src/backend/analytics/: google.rs  matomo.rs  mod.rs  plausible.rs  umami.rs
src/backend/api/: mod.rs  push.rs  router.rs  status_page_router.rs
src/backend/auth/: mod.rs  password.rs  totp.rs
src/backend/data/: settings.json
src/backend/database/: embedded.rs  mod.rs  orm.rs  setup.rs
src/backend/docker/: mod.rs
src/backend/error/: mod.rs
src/backend/jobs/: clear_data.rs  mod.rs  vacuum.rs
src/backend/metrics/: mod.rs
src/backend/middleware/: rate_limiter.rs
src/backend/model/: api_key.rs  docker_host.rs  domain_expiry.rs  group.rs  heartbeat.rs  incident.rs  maintenance.rs  mod.rs  monitor.rs  proxy.rs  remote_browser.rs  setting.rs  status_page.rs  tag.rs  user.rs
src/backend/monitor/: base.rs  browser.rs  dns.rs  evaluator.rs  expression.rs  gamedig.rs  globalping.rs  group.rs  grpc.rs  http.rs  mod.rs  mongodb.rs  mqtt.rs  mssql.rs  mysql.rs  operators.rs  oracle.rs  postgres.rs  rabbitmq.rs  redis.rs  sip.rs  smtp.rs  snmp.rs  system_service.rs  tailscale.rs  tcp.rs  variables.rs  websocket.rs
src/backend/notification/: alerta.rs  alertnow.rs  aliyun_sms.rs  apprise.rs  bale.rs  bark.rs  base.rs  bitrix24.rs  brevo.rs  call_me_bot.rs  elks.rs  (+84 more)
(+477 files in other folders)
